feat: enforce maven usage for doing builds